[package]
name = "mitm_tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "host_discovery"
path = "src/bin/host_discovery.rs"

[[bin]]
name = "traffic_monitor"
path = "src/bin/traffic_monitor.rs"

[dependencies]
pnet = "0.35.0"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.20", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
pcap = "2.2.0"
handlebars = "6.2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
dns-parser = "0.8.0"
httparse = "1.9.5"
h2 = "0.4.6"
quinn = "0.11.5"
bytes = "1.8.0"
http = "1.1.0"
